--- a/Shifts/Shifts/Base.lproj/Main.storyboard
+++ b/Shifts/Shifts/Base.lproj/Main.storyboard
@@ -137,55 +137,58 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3rq-28-Mch">
-                                <rect key="frame" x="20" y="272" width="374" height="416"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="3rq-28-Mch">
+                                <rect key="frame" x="20" y="287" width="374" height="346"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cYo-yQ-2Wk" userLabel="employeeStack">
-                                        <rect key="frame" x="27" y="0.0" width="320" height="128"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="cYo-yQ-2Wk" userLabel="employeeStack">
+                                        <rect key="frame" x="21" y="0.0" width="332.5" height="100"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Employee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qC8-Qg-twm">
-                                                <rect key="frame" x="119" y="0.0" width="82.5" height="23"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="82.5" height="23"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sIx-hd-LGi">
-                                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                                <rect key="frame" x="132.5" y="0.0" width="200" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="cLI-wp-emB"/>
+                                                    <constraint firstAttribute="width" constant="200" id="pjc-9r-o96"/>
                                                 </constraints>
                                             </pickerView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xZ8-AG-Dhf">
-                                        <rect key="frame" x="27" y="144" width="320" height="128"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="xZ8-AG-Dhf">
+                                        <rect key="frame" x="43.5" y="123" width="287" height="100"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Role" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4j-wF-3Dk">
-                                                <rect key="frame" x="141.5" y="0.0" width="37" height="23"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="37" height="23"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IuM-J6-6an">
-                                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                                <rect key="frame" x="87" y="0.0" width="200" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="OQr-U8-45G"/>
+                                                    <constraint firstAttribute="width" constant="200" id="eL9-6M-rUb"/>
                                                 </constraints>
                                             </pickerView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="9Eg-HN-Hzt">
-                                        <rect key="frame" x="27" y="288" width="320" height="128"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="9Eg-HN-Hzt">
+                                        <rect key="frame" x="39.5" y="246" width="295.5" height="100"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxI-z3-UaP">
-                                                <rect key="frame" x="137.5" y="0.0" width="45.5" height="23"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="45.5" height="23"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc5-6C-HDW">
-                                                <rect key="frame" x="0.0" y="28" width="320" height="100"/>
+                                                <rect key="frame" x="95.5" y="0.0" width="200" height="100"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="XYR-kk-SzT"/>
                                                     <constraint firstAttribute="height" constant="100" id="wiu-SY-UcW"/>
                                                 </constraints>
                                             </pickerView>
@@ -194,16 +197,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Oqu-rO-R6I">
-                                <rect key="frame" x="20" y="81" width="374" height="78"/>
+                                <rect key="frame" x="20" y="81" width="374" height="75.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVH-kh-iZ4">
-                                        <rect key="frame" x="144" y="0.0" width="86" height="23"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <rect key="frame" x="148.5" y="0.0" width="77.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="1Ij-cc-SiS">
-                                        <rect key="frame" x="27" y="28" width="320" height="50"/>
+                                        <rect key="frame" x="27" y="25.5" width="320" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="6Cx-Kw-qlM"/>
                                         </constraints>
@@ -211,16 +214,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="r1K-2G-lWi">
-                                <rect key="frame" x="20" y="164" width="374" height="78"/>
+                                <rect key="frame" x="20" y="161.5" width="374" height="75.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8w-BW-gzP">
-                                        <rect key="frame" x="148.5" y="0.0" width="77" height="23"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <rect key="frame" x="152.5" y="0.0" width="69.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="llP-Ag-rVD">
-                                        <rect key="frame" x="27" y="28" width="320" height="50"/>
+                                        <rect key="frame" x="27" y="25.5" width="320" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="iog-0Z-vkJ"/>
                                         </constraints>
@@ -235,7 +238,7 @@
                             <constraint firstItem="t3k-8f-umT" firstAttribute="trailing" secondItem="r1K-2G-lWi" secondAttribute="trailing" constant="20" id="GXP-fS-xIX"/>
                             <constraint firstItem="U5n-ut-GwX" firstAttribute="centerX" secondItem="6xe-9X-TTa" secondAttribute="centerX" id="KaE-Gv-q68"/>
                             <constraint firstItem="U5n-ut-GwX" firstAttribute="top" secondItem="t3k-8f-umT" secondAttribute="top" constant="20" id="Kkm-ZL-kaZ"/>
-                            <constraint firstItem="3rq-28-Mch" firstAttribute="top" secondItem="r1K-2G-lWi" secondAttribute="bottom" constant="30" id="QTB-Cv-c8e"/>
+                            <constraint firstItem="3rq-28-Mch" firstAttribute="top" secondItem="r1K-2G-lWi" secondAttribute="bottom" constant="50" id="QTB-Cv-c8e"/>
                             <constraint firstItem="Oqu-rO-R6I" firstAttribute="top" secondItem="U5n-ut-GwX" secondAttribute="bottom" constant="25" id="WR9-gu-fUa"/>
                             <constraint firstAttribute="trailing" secondItem="Oqu-rO-R6I" secondAttribute="trailing" constant="20" id="Zw1-95-9yO"/>
                             <constraint firstItem="3rq-28-Mch" firstAttribute="leading" secondItem="t3k-8f-umT" secondAttribute="leading" constant="20" id="a48-5T-gts"/>
